--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,12 +2,14 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  white-space: pre-line;
 }
 
 html,
 body {
   max-width: 100vw;
   height: 100vh;
+  white-space: pre-line;
 }
 
 /* Chrome, Edge, and Safari */
